--- a/src/views/deleteProduct.handlebars
+++ b/src/views/deleteProduct.handlebars
@@ -8,13 +8,13 @@
     <meta name="color-scheme" content="dark">
 </head>
 <body>
-    <h2 class="subtitle section make-it-white">Delete a Product</h2>
+    <h2 class=" section make-it-white">Delete a Product</h2>
 
     <form class="section" id="deleteForm">
-        <label class="make-it-white" for="pid">Product ID:</label>
+        <label class="make-it-white make-it-normal" for="pid">Product ID:</label>
         <input type="text" id="pid" name="pid" required>
 
-        <label for="killFlag" class="make-it-white">
+        <label for="killFlag" class="make-it-white make-it-normal">
             <input type="checkbox" id="killFlag" name="killFlag">
             Hard delete (cannot be undone)
         </label>
@@ -54,7 +54,7 @@
         });
     </script>
 
-    <div class="section make-it-semi-back is-small">
+    <div class="section make-it-semi-back make-it-normal is-small">
         <a href="/">View Products - Static</a> 
         <b>|</b>
         <a href="/realtimeproducts">View Products - Real-time</a>
