--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="/static/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
-<body class="splash-page-home">
-    <header>
-        <h2 class="title-bar-container make-it-semi-back make-it-dark is-frozen">BE Product Server</h2>
+<body class="splash-page-home make-it-normal">
+
+    <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal is-small">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+                <img src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo" width="115px">
+            </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item is-small make-it-rounded-top" href="/products">Products</a>
+                <a class="navbar-item is-small make-it-rounded-top" href="/carts">Carts</a>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -18,7 +30,7 @@
     </main>
 
     <footer class="content section make-it-white">
-        <p>BE Product Server</p>
+        <p>&copy; 2025 Shopnhour </p>
     </footer>
 </body>
 </html>
