--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -28,7 +28,7 @@
             const paginatedProducts = products.slice(start, end);
 
             productList.innerHTML = `
-                <table class="table is-striped is-hoverable is-fullwidth make-it-rounded-top make-it-semi-back">
+                <table class="table is-striped is-hoverable is-fullwidth make-it-rounded-top make-it-semi-back make-it-normal">
                     <thead>
                         <tr>
                             <th>PID</th>
@@ -67,18 +67,18 @@
     </script>
 </head>
 <body>
-    <div class="subtitle section make-it-dark make-it-white-back">Product List - Realtime display</div>
+    <div class=" section make-it-dark make-it-white-back">Product List - Realtime display</div>
     <div class="section">
         
         <div id="productList"></div>
         <br>
         <div class="grid-container-3c-by-1r make-it-rounded make-it-white-back make-it-dark">
             <button class="button is-danger" onclick="changePage(-1)">Prev</button>
-            <div class="content make-it-dark make-it-semi-back make-it-rounded make-it-center section" id="productCount"></div>
+            <div class="content make-it-dark make-it-semi-back make-it-normal make-it-rounded make-it-center section" id="productCount"></div>
             <button class="button is-success" onclick="changePage(1)">Next</button>
         </div>
         
-        <div class="content make-it-dark make-it-rounded-top make-it-semi-back rt-general-page-footer" id="paginationInfo"></div>
+        <div class="content make-it-dark make-it-rounded-top make-it-semi-back make-it-normal rt-general-page-footer" id="paginationInfo"></div>
     </div>
 </body>
 </html>
