--- a/src/views/addProduct.handlebars
+++ b/src/views/addProduct.handlebars
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <h2 class="subtitle section make-it-white">Add a New Product</h2>
+    <h2 class=" section make-it-white">Add a New Product</h2>
     <form class="content" action="/forms/add-product" method="POST">
-        <div class="section box make-it-semi-back">
-            <label class="make-it-white" for="title">Title:</label>
+        <div class="section box make-it-semi-back make-it-normal">
+            <label class="make-it-white make-it-normal" for="title">Title:</label>
             <input placeholder="Title" class="input is-dark is-small" type="text" id="title" name="title" required value="{{title}}"><br><br>
 
-            <label class="make-it-white" for="description">Description:</label>
+            <label class="make-it-white make-it-normal" for="description">Description:</label>
             <textarea placeholder="Description" class="textarea is-small" id="description" name="description" required>{{description}}</textarea><br><br>
 
-            <label class="make-it-white" for="code">Code:</label>
+            <label class="make-it-white make-it-normal" for="code">Code:</label>
             <input placeholder="ABC-DEC" class="input is-small" type="text" id="code" name="code" required value="{{code}}"><br><br>
 
-            <label class="make-it-white" for="price">Price:</label>
+            <label class="make-it-white make-it-normal" for="price">Price:</label>
             <input placeholder="Price" class="input is-small is-dark" type="number" id="price" name="price" min="0" required value="{{price}}"><br><br>
 
-            <label class="make-it-white" for="stock">Current Stock:</label>
+            <label class="make-it-white make-it-normal" for="stock">Current Stock:</label>
             <input placeholder="Stock" class="input is-small" type="number" id="stock" name="stock" min="0" required value="{{stock}}"><br><br>
 
-            <label class="make-it-white" for="category">Category:</label>
+            <label class="make-it-white make-it-normal" for="category">Category:</label>
             <input placeholder="Category" class="input is-small" type="text" id="category" name="category" required value="{{category}}"><br><br>
 
-            <label class="make-it-white" for="status">Status:</label>
+            <label class="make-it-white make-it-normal" for="status">Status:</label>
             <select class="input is-small" id="status" name="status" required>
                 <option value="true" {{#if status}}selected{{/if}}>Active</option>
                 <option value="false" {{#unless status}}selected{{/unless}}>Inactive</option>
