--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,18 +10,16 @@
 </head>
 <body class="splash-page-home make-it-normal">
 
-    <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal is-small">
+    <header class="title-bar-container other-bar is-frozen make-it-semi-back make-it-normal is-small grid-container-2c-by-1r">
         <div class="navbar-brand">
             <a class="navbar-item" href="/">
                 <img src="/static/shopnhour_blue.png" alt="Shopnhour Store Logo" width="115px">
             </a>
         </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item is-small make-it-rounded-top" href="/products">Products</a>
-                <a class="navbar-item is-small make-it-rounded-top" href="/carts">Carts</a>
-            </div>
+        <div class="grid-container-3c-by-1r make-it-dark-back make-it-rounded make-it-small is-dark">
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/products">Products</a>
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/carts">Carts</a>
+                <a class="navbar-item is-small make-it-rounded make-it-semi" href="/more">More</a>
         </div>
     </header>
 
